--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 
 .App {
-  background-image: url(./images/background.svg);
+  background-image: url('./images/background.svg');
   height: 100vh;
 }
 
